--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,17 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+<html>
+    <body id="main">
+
+        <script type="module">
+            const root = document.createElement('div')
+            root.setAttribute('id', 'root')
+            document.getElementById('main').appendChild(root)
+            const div = document.createElement('div')
+            div.className = 'container'
+            div.innerHTML ='Hello World'
+            document.getElementById('root').appendChild(div);
+        </script>
+    </body>
+</html>
